examples/errors/binding-overlap.sem
system (Syntax x Syntax) => Syntax

meta x = Syntax

rule TermOverlap
----------
<x> => <x>

